style(extra.css): adjust line-height and margin for h1 tags to improve readability fix(screenshots.json): modify geometry values for better screenshot positioning The changes in extra.css are made to improve the readability of h1 tags by adjusting the line-height and margin. The modification in screenshots.json is done to better position the screenshot by tweaking the geometry values.

--- a/docs/extra.css
+++ b/docs/extra.css
@@ -3,6 +3,11 @@
   max-width: 75rem;
 }
 
+.md-typeset h1 {
+    line-height: 1;
+    margin: 0;
+}
+
 *, ::after, ::before {
   box-sizing: unset;
 }
